# Cabin_management_app

./: BaggageBin.qml  CMakeLists.txt  GalleyPage.qml  GamesPage.qml  ICabinPage.qml  Main.qml  OrdersPage.qml  Restroom.qml  SeatBelt.qml  TcpServer.cpp  TcpServer.h  main.cpp  tcp_server.py
